# bargo

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  PLAN_V2.md  PRD.md  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/negotiation-service/: .env.example  README.md  package.json  tsconfig.json
apps/negotiation-service/src/: config.ts  demoSeed.ts  index.ts  matchmaker.ts
apps/web/: README.md  next.config.mjs  package.json  tailwind.config.ts  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  (+2 more)
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  README.md  Seed.s.sol
contracts/src/: BargoEscrow.sol  HaggleEscrow.sol  KarmaReader.sol  RLNVerifier.sol
contracts/test/: AttestationLib.t.sol  BargoEscrow.t.sol  HaggleEscrow.t.sol  KarmaReader.t.sol  RLNVerifier.t.sol
docs/: attestation-verification.md  code-review-A.md  code-review-B.md  deployments.md  qa-report.md  threat-model.md  ux-review.md
scripts/: package.json  qa-scenarios.mjs  qa-seal.mjs  qa-web-bug-repro.mjs  test-verify.mjs  verify-attestation.mjs
scripts/fixtures/: sample-attestation.json
services/tee/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/tee/haggle_tee/: __init__.py  attest.py  crypto.py  karma_weight.py  keys.py  match_conditions.py  negotiate.py  parse_conditions.py  schemas.py  server.py
services/tee/scripts/: gen_dev_cert.sh
services/tee/tests/: test_crypto.py  test_karma_weight.py  test_match_conditions.py  test_negotiate.py  test_parse_conditions.py
(+84 files in other folders)
